refactor: 컨벤션 미적용 수정
- final 키워드 적용
- save -> create